--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ body {
 }
 .menu .width {
 	padding-left: 0px;
+	width: 960px;
 }
 .menu a {
 	color: #fff;
@@ -339,6 +340,7 @@ a.underline:hover {
 }
 a.menu-link.underline {
 	text-decoration: underline;
+	font-size: 13px;
 }
 a.menu-link.underline:hover {
 	text-decoration: none;
@@ -696,7 +698,7 @@ a.color {
 
 
 .sh-box, .sh {
-	box-shadow: 0 5px 7px rgba(0,0,0,0.2);
+	box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
 	border-radius: 5px;
 	background-color: #fff;
 	margin-bottom: 20px;
@@ -996,7 +998,7 @@ ul.tabs li.last {
 }
 ul.tabs li.selected {
 	background: #fff;
-	box-shadow: 0 5px 7px rgba(0,0,0,0.2);
+	box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
 	border-radius: 5px 5px 0 0;
 	position: relative;
 }
@@ -1012,7 +1014,7 @@ ul.tabs li.selected .sh-fix {
 .tab-box {
 	display: none;
 	position: relative;
-	box-shadow: 0 5px 7px rgba(0,0,0,0.2);
+	box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
 	background: #fff;
 	margin-bottom: 20px;
 	padding: 15px 21px 20px;
@@ -1269,8 +1271,13 @@ select.select2-complex {
 	font-size: 21px;
 	font-family: 'helveticaneuecyrbold';
 	font-weight: normal;
-	margin-bottom: 24px;
+	margin-bottom: 22px;
 	line-height: 1em;
+	padding-top: 2px;
+}
+.right-content h1.v1 {
+	padding-top: 11px;
+	margin-bottom: 40px;
 }
 .sort {
 	padding: 10px 20px;
@@ -1335,6 +1342,7 @@ a.sort-btn {
 }
 .filter-cont {
 	border: 2px solid #ffbf3f;
+	margin-bottom: 20px;
 }
 .catalog-title {
 	background-color: #000;
@@ -1358,11 +1366,12 @@ a.sort-btn {
 	text-decoration: none;
 }
 .breed-cont {
-	margin-bottom: 32px;
+	margin-bottom: 30px;
 }
-.breed-btn {
+.breed-cont .popup-btn {
 	display: block;
 	text-align: center;
+	padding: 0;
 }
 .btn-big {
 	height: 38px;
@@ -1370,6 +1379,10 @@ a.sort-btn {
 	font-size: 16px;
 	font-family: 'helveticaneuecyrbold';
 	text-align: center;
+}
+.breed-cont .btn-big.active {
+	font-size: 14px;
+	font-family: 'helveticaneuecyrroman';
 }
 .breadcrumb {
 	font-size: 11px;
@@ -1488,7 +1501,16 @@ h5,.h5 {
 }
 .catalog .catalog-item .catalog-item-category {
 	display: none;
+	position: absolute;
+	bottom: -40px;
+	left: 0;
+	background: #fff;
+	padding: 10px 0;
+	width: 180px;
 }
+.catalog .catalog-item:hover .catalog-item-category {
+	display: block;
+} 
 .top-page {
 	padding-right: 26px;
 	background: url(../images/ico/top-page.png) no-repeat right center;
@@ -1547,4 +1569,268 @@ a.page {
 	height: 22px;
 	line-height: 22px;
 	font-size: 12px;
+}
+.slider-range-cont {
+	margin: 0 8px;
+}
+.filter-content.slider-form {
+	margin: 0;
+}
+.popup-cont {
+	position: relative;
+}
+.popup-layer {
+	position: absolute;
+	left: 0;
+	box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
+	background: #fff;
+	border-radius: 5px;
+	width: 400px;
+	z-index: 1000;
+	display: none;
+}
+.popup-inner {
+	padding: 20px;
+}
+.popup-close {
+	width: 14px;
+	height: 15px;
+	background: url(../images/ico/close.png) no-repeat;
+	cursor: pointer;
+	right: 13px;
+	top: 13px;
+	position: absolute;
+}
+.popup-close:hover {
+	background-position: left bottom;
+}
+.popup-corner {
+	position: absolute;
+	width: 18px;
+	height: 11px;
+	background: url(../images/ico/popup-corner.png) no-repeat;
+	top: -8px;
+	left: 20px;
+}
+.tags {
+	margin-bottom: 10px;
+	margin-top: 13px;
+}
+.tag {
+	display: inline-block;
+	background: #17b6e8;
+	color: #fff;
+	border-radius: 5px;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 7px 0 10px;
+	margin-bottom: 7px;
+}
+.tag-remove {
+	display: inline-block;
+	vertical-align: middle;
+	width: 14px;
+	height: 15px;
+	background: url(../images/ico/remove.png) no-repeat;
+	cursor: pointer;
+	margin-left: 17px;
+}
+.tag-remove:hover {
+	background-position: left bottom;
+}
+input.tag-input {
+	height: 38px;
+	line-height: 38px;
+	border: 1px solid #cdcdcd;
+	background: #efefef;
+	border-radius: 5px;
+	width: 236px;
+	padding: 0 102px 0 20px; 
+}
+.autocomplete-cont {
+	position: relative;
+}
+.autocomplete {
+	position: absolute;
+	width: 100%;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
+	left: 0;
+	top: 41px;
+	display: none; 
+}
+.autocomplete-line {
+	padding: 12px 0 12px 20px;
+	line-height: 1em;
+	cursor: pointer;
+}
+.autocomplete-line:hover {
+	background: #eceaea;
+}
+.autocomplete-submit {
+	position: absolute;
+	right: 4px;
+	top: 4px;
+	width: 94px;
+	padding: 0;
+	text-align: center;
+	height: 30px;
+	line-height: 30px;
+	font-family: "helveticaneuecyrroman";
+}
+.tip-layer {
+	position: absolute;
+	left: 220px;
+	top: 0;
+	background: #fff;
+	border-radius: 0 5px 5px 0;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 15px;
+	white-space: nowrap;
+	box-shadow: 0 3px 7px 1px rgba(0,0,0,0.3);
+	display: none;
+}
+.tip-corner {
+	width: 11px;
+	height: 11px;
+	background: url(../images/ico/tip-corner.png) no-repeat;
+	left: -10px;
+	top: 50%;
+	margin-top: -6px;
+	position: absolute;
+	display: block;
+}
+.breadcrumb-cont {
+	margin-bottom: 5px;
+}
+.breadcrumb-cont .breadcrumb {
+	min-height: 24px;
+}
+.breadcrumb-cont .small-select {
+	margin-top: -6px;
+}
+.line:last-child .catalog-item {
+	border-bottom: none;
+}
+.catalog-list {
+	margin-bottom: 13px;
+}
+.mb0 {
+	margin-bottom: 0 !important;
+}
+.catalog-list li {
+	margin: 0 18px;
+}
+.catalog-list li a.catalog-list-link {
+    border-bottom: 1px solid #eceaea;
+    line-height: 1em;
+    padding: 13px 0;
+    display: block;
+    text-decoration: none;
+}
+.catalog-list li:last-child a.catalog-list-link {
+	border-bottom: none;
+}
+.catalog-list li:first-child a.catalog-list-link {
+    margin-top: 20px;
+}
+.filter-cont .small-section {
+	width: auto;
+	margin-bottom: 0;
+	margin-right: 0;
+	white-space: nowrap;
+	box-shadow: none;
+}
+.filter-cont .small-section .section-title-txt {
+	width: 72px;
+}
+.filter-cont .small-section .title-ico {
+	margin-left: 7px;
+	margin-right: 7px;
+}
+.btn.btn-block {
+	display: block;
+	text-align: center;
+}
+.blog-short-item.w300 {
+	width: 300px;
+}
+h3.mb10 {
+	margin-bottom: 10px;
+}
+.brand-btn-cont {
+	margin: 10px 18px 18px;
+}
+.brand-more .catalog-list {
+	display: none;
+}
+.brand-more .catalog-list li:first-child a.catalog-list-link {
+	margin-top: 0;
+	border-top: 1px solid #eceaea;
+}
+.main-catalog-item {
+	float: left;
+	width: 160px;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 0 4px 7px 1px rgba(0, 0, 0, 0.3);
+	margin: 0 20px 20px 0;
+	text-align: center;
+}
+.main-catalog-item.every4 {
+	margin-right: 0;
+}
+.main-catalog-item-img {
+	height: 145px;
+	margin-bottom: 10px;
+	margin-top: 5px;
+	line-height: 145px;
+}
+.main-catalog-item-img img {
+	display: inline-block;
+	vertical-align: middle;
+}
+.main-catalog-item-img a:hover img {
+	opacity: 0.6;
+	 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+}
+.main-catalog-item-name {
+	height: 50px;
+}
+.main-catalog-item-name a {
+	font-family: 'open_sanssemibold';
+	line-height: 1em;
+}
+.subcatalog-title {
+	background: #ffbf3f;
+	border-radius: 5px 5px 0 0;
+	padding: 18px 20px 15px;
+}
+h2 {
+	font-family: 'helveticaneuecyrbold';
+	font-weight: normal;
+}
+.subcatalog-title h2 {
+	font-size: 16px;
+	line-height: 1em;
+}
+.subcatalog-title a {
+	color: #000;
+}
+.subcatalog-title .fleft {
+	width: 55%;
+}
+.subcatalog-title .fright {
+	text-align: right;
+	width: 43%;
+}
+.sh.def-color {
+	line-height: 1.5em;
+}
+.sh.def-color strong {
+	font-weight: normal;
+	font-family: 'open_sanssemibold';
+	color: #000;
 }
