--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ body {
 	box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 .menu .width {
-	padding-left: 0px;
+	padding-left: 0;
 	width: 960px;
 }
 .menu a {
@@ -758,13 +758,21 @@ img.adv {
 	width: 460px;
 	float: right;
 }
-
+.h1, h1 {
+	text-transform: uppercase;
+	font-size: 21px;
+	font-family: 'helveticaneuecyrbold';
+	font-weight: normal;
+	margin-bottom: 24px;
+	line-height: 1em;
+}
 .h3, h3 {
 	font-size: 21px;
 	text-transform: uppercase;
 	font-family: 'helveticaneuecyrbold';
 	font-weight: normal;
 	margin-bottom: 28px;
+	line-height: 1em;
 }
 .h4, h4 {
 	font-size: 14px;
@@ -775,6 +783,12 @@ img.adv {
 }
 .sh-box-pad {
 	padding: 19px;
+}
+.sh-box-pad-lr {
+	padding: 0 19px;
+}
+.sh-box-panel {
+	background-color: #f7f7f7;
 }
 .about-box p {
 	font-size: 12px;
@@ -945,7 +959,7 @@ table.cols5 td {
     height: 28px;
     width: 38px; 
     position: absolute;
-    right: 0px;
+    right: 0;
     top: 1px;
     text-align: center;
     font-size: 13px;
@@ -1035,7 +1049,7 @@ ul.tabs li.selected .sh-fix {
 	height: 350px;
 	background: #eceaea;
 	float: left;
-	margin: 0px 29px 0 29px;
+	margin: 0 29px 0 29px;
 }
 .catalog-item-img {
 	padding-top: 15px;
@@ -1056,7 +1070,7 @@ ul.tabs li.selected .sh-fix {
 }
 .quick-view-btn {
 	position: absolute;
-	top: 0px;
+	top: 0;
 	left: 0;
 	width: 100%;
 	background: #def8ff;
@@ -1233,7 +1247,7 @@ select.select2-complex {
 	width: 100px;
 	background-color: #fff;
 	border-radius: 5px;
-	box-shadow: 0 0px 2px 1px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
 	padding-top: 10px;
 	text-align: center;
 	height: 140px;
@@ -1387,6 +1401,7 @@ a.sort-btn {
 .breadcrumb {
 	font-size: 11px;
 	line-height: 1em;
+	margin-bottom: 13px;
 	overflow: hidden;
 }
 .bread {
@@ -1510,7 +1525,7 @@ h5,.h5 {
 }
 .catalog .catalog-item:hover .catalog-item-category {
 	display: block;
-} 
+}
 .top-page {
 	padding-right: 26px;
 	background: url(../images/ico/top-page.png) no-repeat right center;
@@ -1645,7 +1660,7 @@ input.tag-input {
 	background: #efefef;
 	border-radius: 5px;
 	width: 236px;
-	padding: 0 102px 0 20px; 
+	padding: 0 102px 0 20px;
 }
 .autocomplete-cont {
 	position: relative;
@@ -1658,7 +1673,7 @@ input.tag-input {
 	box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
 	left: 0;
 	top: 41px;
-	display: none; 
+	display: none;
 }
 .autocomplete-line {
 	padding: 12px 0 12px 20px;
@@ -1833,4 +1848,62 @@ h2 {
 	font-weight: normal;
 	font-family: 'open_sanssemibold';
 	color: #000;
+}
+/* Алфавитный список */
+.alphabet {}
+.alphabet-item {
+	display: inline-block;
+}
+.alphabet-link{
+	position: relative;
+	display: block;
+	padding: 0 5px;
+	font: normal 16px/51px 'helveticaneuecyrbold';
+	text-align: center;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+.alphabet-link:hover,
+.alphabet-link.active{
+	background-color: #17b6e8;
+	color: #fff;
+}
+.alphabet-link.active:hover:after {
+	content: '';
+	width: 100%;
+	height: 7px;
+	position: absolute;
+	left: 0;
+	bottom: 6px;
+	background: url(../images/ico/reset-white.png) 50% 0 no-repeat #17b6e8;
+}
+.alphabet  a.color {
+	margin-top: 18px;
+}
+
+/* категории бренов*/
+.brands{}
+.brand-section {
+	border-bottom: 1px solid #eceaea;
+}
+.brand-section:last-child {
+	border-bottom: 0;
+}
+.brand-column {
+	display: inline-block;
+	vertical-align: top;
+}
+.brand-section-name {
+	width: 70px;
+	font: 34px/100px 'helveticaneuecyrbold';
+	text-transform: uppercase;
+}
+.brand-list {
+	width: 200px;
+	margin-right: 8px;
+	padding-top: 17px;
+}
+.brand-link {
+	line-height: 22px;
+	text-decoration: none;
 }
