--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ a.btn {
 	margin-top: 5px;
 }
 .price-cont .price {
-	font-family: 'helveticaneuecyrblack';
+	font-family: 'open_sansbold';
 	font-size: 13px;
 	line-height: 1em;
 }
@@ -614,7 +614,7 @@ a.promo-img:hover .go {
 	border-bottom: 0;
 	border-radius: 5px 5px 0 0;
 	text-align: center;
-	font-family: 'helveticaneuecyrbold';
+	font-family: 'open_sanssemibold';
 	height: 48px;
 }
 .section-body {
@@ -1227,6 +1227,7 @@ select.select2-complex {
 	z-index: 10;
 	height: 170px;
 	overflow: hidden;
+	margin-top: 19px;
 }
 .quick-slide {
 	float: left;
@@ -1353,7 +1354,7 @@ a.sort-btn {
 	text-align: center;
 	padding: 15px;
 	color: #fff;
-	font-family: 'helveticaneuecyrbold';
+	font-family: 'open_sanssemibold';
 	border-radius: 4px 4px 0 0;
 }
 .level-up {
@@ -1365,12 +1366,14 @@ a.sort-btn {
 	text-decoration: underline;
 	padding-left: 14px;
 	background: url(../images/ico/back.png) no-repeat left center;
+	font-size: 15px;
 }
 .level-up a:hover {
 	text-decoration: none;
 }
 .breed-cont {
 	margin-bottom: 30px;
+	z-index: 100;
 }
 .breed-cont .popup-btn {
 	display: block;
@@ -1756,6 +1759,9 @@ input.tag-input {
 .line:last-child .catalog-item {
 	border-bottom: none;
 }
+.show-category .line:last-child .catalog-item {
+	margin-bottom: 0;
+}
 .catalog-list {
 	margin-bottom: 13px;
 }
@@ -1792,6 +1798,9 @@ input.tag-input {
 .btn.btn-block {
 	display: block;
 	text-align: center;
+	padding-left: 0;
+	padding-right: 0;
+	width: 100%;
 }
 .blog-short-item.w300 {
 	width: 300px;
@@ -1942,4 +1951,154 @@ h2 {
 }
 .ver-inline .tags {
 	margin-top: 0;
+}
+.top-fav {
+	float: left;
+	background: url(../images/ico/fav1.png) no-repeat;
+	padding-left: 21px;
+	min-height: 15px;
+	display: block;
+	margin-right: 20px;
+}
+.notice-block {
+	float: left;
+	position: relative;
+	margin-right: 20px;
+}
+.notice-layer {
+	position: absolute;
+	display: none;
+}
+.notice-txt {
+	background: url(../images/ico/notice.png) no-repeat;
+	padding-left: 19px;
+	display: inline-block;
+	min-height: 15px;
+	cursor: pointer;
+}
+.notice-new {
+	color: #f20000;
+}
+.person-block {
+	float: left;
+}
+.person-link {
+	background: url(../images/ico/person.png) no-repeat;
+	padding-left: 19px;
+	min-height: 15px;
+}
+.login-block {
+	padding-top: 10px;
+	margin-bottom: 5px;
+	font-size: 11px;
+	line-height: 1.3em;
+}
+a.blue {
+	color: #35c1ea;
+}
+.sh-w200 {
+	width: 200px;
+	padding: 30px 0px 0 20px;
+	float: left;
+	margin-right: 20px;
+	text-align: center;
+	height: 278px;
+	overflow: hidden;
+}
+.sh-w200 .catalog-item {
+	margin-bottom: 10px;
+}
+.sh-w200 .catalog-item .catalog-item-title {
+	min-height: 34px;
+	max-height: 34px;
+}
+h4.fs13 {
+	font-size: 13px;
+}
+.sh-w200 h4 {
+	text-align: left;
+}
+.sh-overflow {
+	overflow: hidden;
+	padding: 30px 20px 0 20px;
+	min-height: 278px;
+}
+.sh-overflow h4 {
+	margin-bottom: 17px;
+}
+.sm-grey {
+	color: #787d82;
+}
+.big-t {
+	font-size: 21px;
+	font-family: 'open_sansbold';
+	margin-bottom: 15px;
+	line-height: 1.1em;
+}
+.def-t {
+	margin-bottom: 15px;
+}
+.layer {
+	display: none;
+}
+.help-list-item {
+	padding-top: 10px;
+	margin-bottom: 18px;
+}
+.help-list-item:last-child {
+	margin-bottom: 6px;
+}
+.help-list-ico {
+	float: left;
+	margin-right: 16px;
+}
+.help-list-txt {
+	overflow: hidden;
+	padding-top: 7px;
+	font-family: 'open_sanssemibold';
+}
+.no-bold {
+	font-size: 12px;
+	color: #5b5b5b;
+	font-family: 'helveticaneuecyrroman';
+	margin-top: 2px;
+}
+.w240 {
+	width: 240px;
+}
+.layer-inner {
+	padding: 35px 40px 40px;
+}
+.layer h3 {
+	color: #000;
+	margin-bottom: 16px;
+	line-height: 1.2em;
+}
+.label {
+	color: #787d82;
+	font-size: 11px;
+	margin-bottom: 5px;
+}
+input.def-input {
+	background: #f7f7f7;
+	border: 1px solid #d9d9d9;
+	border-radius: 5px;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 10px;
+	width: 100%;
+	box-sizing: border-box;
+	margin-bottom: 18px;
+	font-size: 12px;
+	font-family: 'open_sanssemibold';
+}
+.layer-note {
+	color: #000;
+	margin-bottom: 12px;
+}
+input.btn {
+	line-height: normal;
+}
+.sub-cont {
+	padding-top: 10px;
 }
