--- a/templates/filter.html
+++ b/templates/filter.html
@@ -1,4 +1,4 @@
-//= includes/header.html
+//= includes/_header.html
 
 <div class="width">
 	<div class="float-cont breadcrumb-cont">
@@ -531,4 +531,4 @@
 	</div>
 </div>
 
-//= includes/footer.html
+//= includes/_footer.html
