--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-//= includes/header.html
+//= includes/_header.html
 
 <div class="width promo-width">
 	<div class="promo float-cont">
@@ -488,5 +488,4 @@
 	</div>
 </div>
 
-//= includes/footer.html
-
+//= includes/_footer.html
