--- a/templates/brands.html
+++ b/templates/brands.html
@@ -1,4 +1,4 @@
-//= includes/header.html
+//= includes/_header.html
 
 <div class="width">
 	<div class="float-cont">
@@ -241,4 +241,4 @@
 	</div>
 </div>
 
-//= includes/footer.html
+//= includes/_footer.html
