--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -1,7 +1,10 @@
 $color-white: #fff;
 $color-black: #000;
+$color-orange: #ffbf3f;
+$color-grey-light: #eceaea;
 
 $color-bg-grey: #f7f7f7;
 
 $color-link-black: #231f20;
 $color-link-blue: #35c1ea;
+$color-link-brown: #886622;
