--- a/static/scss/_fonts.scss
+++ b/static/scss/_fonts.scss
@@ -38,7 +38,7 @@
   url('../fonts/opensansbold/OpenSans-Bold-webfont.woff2') format('woff2'),
   url('../fonts/opensansbold/OpenSans-Bold-webfont.woff') format('woff'),
   url('../fonts/opensansbold/OpenSans-Bold-webfont.ttf') format('truetype'),
-  url('../fonts/opensansbold/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
+  url('../fonts/opensansbold/OpenSans-Bold-webfont.svg#opensansbold') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -49,7 +49,7 @@
   url('../fonts/opensanssemibold/OpenSans-Semibold-webfont.woff2') format('woff2'),
   url('../fonts/opensanssemibold/OpenSans-Semibold-webfont.woff') format('woff'),
   url('../fonts/opensanssemibold/OpenSans-Semibold-webfont.ttf') format('truetype'),
-  url('../fonts/opensanssemibold/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
+  url('../fonts/opensanssemibold/OpenSans-Semibold-webfont.svg#opensanssemibold') format('svg');
   font-weight: normal;
   font-style: normal;
 }
