Начальное разделение стилей

--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -8,3 +8,5 @@ $color-bg-grey: #f7f7f7;
 $color-link-black: #231f20;
 $color-link-blue: #35c1ea;
 $color-link-brown: #886622;
+
+$color-text-grey: #787d82;
