my html and other files but images paths - not correct

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -79,7 +79,91 @@
 </div>
 
 <div class="layer" id="layer-help">
-    test
+	<div class="layer-inner w240">
+		<h3>Нужна помощь</h3>
+		<div class="help-list-item">
+			<img src="images/ico/h1.png" alt="" class="help-list-ico"/>
+			<div class="help-list-txt">
+				<a href="#layer-call" class="fancybox">Заказать<br/>обратный звонок</a>
+			</div>
+		</div>
+		<div class="help-list-item">
+			<img src="images/ico/h2.png" alt="" class="help-list-ico"/>
+			<div class="help-list-txt">
+				<a href="#layer-status" class="fancybox">Где мой заказ?</a>
+				<div class="no-bold">Узнать статус заказа</div>
+			</div>
+		</div>
+		<div class="help-list-item">
+			<img src="images/ico/h3.png" alt="" class="help-list-ico"/>
+			<div class="help-list-txt">
+				<a href="">Хотите вернуть покупку?</a>
+				<div class="no-bold">Инструкция по возврату</div>
+			</div>
+		</div>
+		<div class="help-list-item">
+			<img src="images/ico/h4.png" alt="" class="help-list-ico"/>
+			<div class="help-list-txt">
+				<a href="">Онлайн-консультант</a>
+				<div class="no-bold">Чат с менеджером</div>
+			</div>
+		</div>
+		<div class="help-list-item">
+			<img src="images/ico/h5.png" alt="" class="help-list-ico"/>
+			<div class="help-list-txt">
+				<a href="">Письмо директору</a>
+				<div class="no-bold">Пожелания и жалобы</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="layer" id="layer-call">
+	<div class="layer-inner w240">
+		<h3>Обратный звонок</h3>
+		<div class="layer-note">Укажите телефон, на который<br/>нужно перезвонить.</div>
+		<form>
+			<div class="label"><label for="f1">Телефон*:</label></div>
+			<input type="tel" class="def-input" placeholder="Например, +7(912) 111-11-11" id="f1"/>
+			<div class="label"><label for="f2">Имя*:</label></div>
+			<input type="text" class="def-input" placeholder="" id="f2"/>
+			<div class="sub-cont"><input type="submit" class="btn btn-block" value="Заказать звонок"/></div>
+		</form>
+	</div>
+</div>
+
+<div class="layer" id="layer-status">
+	<div class="layer-inner w240">
+		<h3>Статус заказа</h3>
+		<form>
+			<div class="layer-note3">Укажите номер заказа (6 цифр)</div>
+			<input type="text" class="def-input" placeholder="123456"/>
+			<div class="mb36">
+				<input type="submit" class="btn btn-block" value="Отправить"/>
+			</div>
+
+			<div class="layer-note">
+			Если вы не помните номер заказа,
+			укажите номер телефона или e-mail,
+			которые вы использовали при оформлении заказа. Ответ придет на телефон или e-mail.
+			</div>
+			<input type="text" class="def-input" placeholder="Телефон или e-mail"/>
+			<div class="mb36"><input type="submit" class="btn btn-block" value="Отправить"/></div>
+
+			<div class="layer-note2">
+				Или позвоните по телефону: 
+				<div class="h3 mb0">+7(495)111-11-11</div>
+			</div>
+		</form>
+	</div>
+	<div class="layer-btm w240">			
+		<div class="mb25">Если вы зарегистрированы на сайте,
+		вы можете отслеживать статус
+		в Личном кабинете в разделе                 
+		Мои заказы
+		</div>
+		<div><a href="" class="btn btn-block">Войти в аккаунт</a></div>
+	</div>
 </div>
 
 <!-- jquery -->
