--- a/css/style.css
+++ b/css/style.css
@@ -2177,3 +2177,239 @@ input.btn {
 	line-height: 22px;
 	text-decoration: none;
 }
+
+
+
+.layer-note {
+	line-height: 1.5em;
+}
+.layer-note2 {
+	text-align: center;
+	color: #000;
+	line-height: 1.5em;
+}
+.layer-note3 {
+	margin-bottom: 5px;
+	color: #000;
+}
+.layer-btm {
+	background: #f5f5f5;
+	padding: 13px 40px 35px;
+	line-height: 1.5em;
+}
+.mb25 {
+	margin-bottom: 25px;
+}
+.card-photo-block {
+	float: left;
+	width: 380px;
+	margin-right: 20px;
+	min-height: 1px;
+}
+.card-desc {
+	float: left;
+	width: 378px;
+	border-right: 1px solid #eceaea;
+}
+.card-service {
+	float: right;
+	width: 110px;
+}
+.card-desc h1 {
+	font-family: 'helveticaneuecyrroman';
+	text-transform: none;
+	margin-bottom: 13px;
+}
+.card-code {
+	color: #787d82;
+	font-size: 11px;
+	line-height: 1em;
+	margin-bottom: 14px;
+}
+.card-rate-cont {
+	margin-bottom: 17px;
+}
+.card-rate {
+	overflow: hidden;
+	display: inline-block;
+	vertical-align: middle;	
+}
+.card-rate-item {
+	float: left;
+	margin-right: 5px;
+	width: 20px;
+	height: 20px;
+	background: url(../images/ico/rate1.png);
+}
+.card-rate-item.unactive {
+	background-position: left bottom;
+}
+.rate-txt {
+	font-size: 11px;
+	display: inline-block;
+	vertical-align: middle;
+}
+.card-price {
+	font-family: 'open_sansbold';
+	font-size: 34px;
+	line-height: 1em;
+	display: inline-block;
+	margin-right: 13px;
+	margin-bottom: 5px;
+	vertical-align: middle;
+}
+.marker-avaliable {
+	display: inline-block;
+	background: url(../images/ico/aval.png) no-repeat;
+	padding-left: 26px;
+	height: 20px;
+	line-height: 20px;
+	vertical-align: middle;
+}
+.card-price-old {
+	color: #787d82;
+	font-size: 13px;
+	font-family: 'open_sanssemibold';
+	text-decoration: line-through;
+}
+.card-price-cont {
+	margin-bottom: 15px;
+}
+.card-short-desc {
+	color: #787d82;
+	line-height: 1.5em;
+	margin-bottom: 25px;
+}
+.count-inc,
+.count-dec {
+	display: inline-block;
+	width: 20px;
+	height: 23px;
+	vertical-align: top;
+	margin-top: 4px;
+	cursor: pointer;
+}
+.count-inc {
+	background: url(../images/ico/inc.png) no-repeat;
+}
+.count-dec {
+	background: url(../images/ico/dec.png) no-repeat;
+}
+.card-count-input {
+	width: 28px;
+	height: 29px;
+	line-height: 29px;
+	background: #f7f7f7;
+	border-radius: 5px;
+	border: 1px solid #d9d9d9;
+	padding: 0 10px;
+}
+.card-count {
+	margin-bottom: 20px;
+}
+.card-total {
+	font-size: 21px;
+	font-family: 'open_sansbold';
+	line-height: 1em;
+	margin-bottom: 16px;
+}
+.total-desc {
+	color: #787d82;
+}
+.btn-buy {
+	padding: 0 55px;
+	margin-right: 20px;
+	vertical-align: middle;
+}
+.semibold {
+	font-family: 'open_sanssemibold';
+}
+.card-service-item {
+	display: inline-block;
+	margin-bottom: 10px;
+	font-size: 11px;
+	line-height: 1.1em;
+}
+.card-service-ico {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 10px;
+}
+.card-service-txt {
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 70px;
+	text-decoration: underline;
+}
+.card-service-item:hover .card-service-txt {
+	text-decoration: none;
+}
+.c-delivery {
+	background: url(../images/ico/delivery1.png) no-repeat;
+	padding-left: 40px;
+	min-height: 30px;
+	display: inline-block;
+	margin-bottom: 5px;
+}
+.fs11-grey {
+	font-size: 11px;
+	color: #787d82;
+	line-height: 1.1em;
+}
+.card-delivery {
+	margin-bottom: 40px;
+}
+.card-delivery .fs11-grey {
+	display: inline-block;
+	padding-left: 40px;
+}
+.bxslider-photo-border {
+	border: 1px solid #dedede;
+	border-radius: 5px;
+	margin-bottom: 20px;
+	position: relative;
+}
+.bxpager {
+	display: block;
+}
+.bxpager-inner {
+	border: 1px solid #dedede;
+	border-radius: 5px;
+	width: 68px;
+	text-align: center;
+	line-height: 68px;
+	height: 68px;
+	background: #fff;
+	display: block;
+}
+.bxpager.active .bxpager-inner {
+	border-color: #ffbf3f;
+}
+.bxpager-inner img {
+	display: inline-block !important;
+	vertical-align: middle;
+	max-width: 65px;
+	max-height: 65px;
+}
+.bxpager-cont {
+	background: #ebebeb;
+	padding: 10px 0;
+	margin-bottom: 30px;
+	position: relative;
+	border-radius: 3px;
+}
+.photo-slide {
+	text-align: center;
+	height: 330px;
+	line-height: 330px;
+}
+.photo-slide img {
+	display: inline-block !important;
+	vertical-align: middle;
+}
+.card-photo-block .bx-arrow-left {
+	border-radius: 0 5px 5px 0;
+}
+.card-photo-block .bx-arrow-right {
+	border-radius: 5px 0 0 5px;
+}
